Copy and aesthetic  changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,9 +9,7 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li>Built from <a href="http://startbootstrap.com/template-overviews/agency/">Bootstrap Agency</a>
-                        </li>
-                        <li>Converted to <a href="http://jekyllrb.com/">jekyllrb</a>
+                        <li>Built in <a href="http://jekyllrb.com/">jekyllrb</a>
                         </li>
                     </ul>
                 </div>
