--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
     <meta name="author" content="">
 
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-
+    <!-- Favicon -->
+    {% include favicon.html %}
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
