--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Skills</h2>
-                    <h3 class="section-subheading text-muted">What I know and some of the classes I have took</h3>
+                    <h3 class="section-subheading text-muted">What I know and classes I have taken.</h3>
                 </div>
             </div>
             <div class="row text-center skill-list-container">
