--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy;2015 Robert Feie </span>
+                    <span class="copyright">Copyright &copy;{{ 'now' | date: "%Y" }} Robert Feie </span>
                 </div>
                 <div class="col-md-4">
 
