--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
                         </li>
                         <li><a href="https://linkedin.com/in/{{site.linkedin}}"><i class="fa fa-linkedin-square"></i></a>
                         </li>
-                    </ul>
+                        <li><a href="{{ site.url }}/assets/rfeie_resume.pdf" data-toggle="tooltip" title="Resume"><i class="fa fa-file-text"></i></a>
+                        </li>                    </ul>
             </div>
         </div>
     </header>
