--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,15 @@ layout: default
     <h1>{{ page.title }} </h1>
     <h2>{{ page.description }}</h2>
     <p class="date"> {{ page.date | date: '%B %d, %Y' }}</p>
-    {{ content }}
+    <div class="blog-tags">
+			<ul class="tags">
+			{% for tag in page.tags %}
+				<li><a href="#" class="tag">{{ tag }}</a></li>
+			{% endfor %}
+			</ul>
+		</div>
+    <div class="blog-body">
+      {{ content }}
+    </div>
   </article>
 </div>
